...
    
    self.window = [[UIWindow alloc] initWithFrame:[[UIScreen mainScreen] bounds]];
    
    self.window.backgroundColor = [UIColor whiteColor];
    
    MasterTableViewController *masterViewController = [[MasterTableViewController alloc] init];
    [masterViewController.navigationItem setTitle:@"Characters"];
    self.navController = [[UINavigationController alloc] initWithRootViewController:masterViewController];
    self.window.rootViewController = self.navController;
   
    [self.window makeKeyAndVisible];
    return YES;
}
...
