...
}

- (void)setUpBitton {
    
    self.button = [[UIButton alloc]initWithFrame:CGRectMake(100, 500, 130, 60)];
    [self.button setBackgroundColor:[UIColor lightGrayColor]];
    [self.button setTitle:@"Go to article" forState:UIControlStateNormal];
    self.button.layer.borderWidth = 1.0f;
    self.button.layer.borderColor = [UIColor blackColor].CGColor;
    self.button.layer.cornerRadius = 4.0f;
    [self.button.titleLabel setFont:[UIFont systemFontOfSize:14]];
    [self.button addTarget:self action:@selector(goToPage:) forControlEvents:UIControlEventTouchUpInside];
}
...
